--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 48px;
+  position: fixed;
+  width: 100%;
 }
 button {
   box-sizing: border-box;
@@ -32,21 +34,22 @@ button {
 }
 form {
   display: flex;
-  padding: 0 48px;
+  padding: 182px 48px 48px;
+  width: fit-content;
 }
-.habits{
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    margin-top: 57px;
+.habits {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 57px;
 }
-.habit{
-    width: 64px;
-    height: 64px;
-    font-size: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.habit {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .days {
   display: flex;
@@ -79,4 +82,9 @@ input {
 input:checked {
   background: #8b5cf6;
   border: 2px solid #a78bfa;
+}
+@media (max-width: 570px){
+  button div{
+    display: none;
+  }
 }
